<resources>
    <string name="app_name">My Application</string>

    <string name="username">Username</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="register">Create new account</string>
    <string name="create">Create</string>
    <string name="remember">Remember password?</string>
    <string name="temp">Temp</string>
    <string name="koin">Koin</string>
    <string name="dagger">Dagger</string>

    <string name="chat_app_name">STS Chat</string>
    <string name="chat_language">en</string>
    <string name="chat_error">Error</string>
    <string name="chat_unknown_error">Unknown error</string>
    <string name="chat_warning">Warning</string>
    <string name="chat_success">Success</string>
    <string name="chat_ok">OK</string>
    <string name="chat_yes">Yes</string>
    <string name="chat_no">No</string>
    <string name="chat_no_network">No network. Please check network and retry.</string>
    <string name="chat_server_error">Server network failed. Please try again later.</string>
    <string name="chat_error_logged_out">You have been logged out. Please login and try again.</string>

    <string name="chat_agora_app_id">f5342636698c4579b3fe68196119bdf9</string>
    <string name="chat_error_fill_info">Please fill all information!</string>
    <string name="chat_error_email">Email is not valid!</string>
    <string name="chat_error_password">Password is not valid!\nPassword must be at least 8 characters long. Contain at least one uppercase letter and lower case letter and one number!</string>
    <string name="chat_error_password_not_match">Password and confirm password does not match!</string>
    <string name="chat_login">Login</string>
    <string name="chat_password">Password</string>
    <string name="chat_user_name_or_email">User name or email</string>
    <string name="chat_register">Register</string>
    <string name="chat_please_input_email_or_password">Please input email or password!</string>
    <string name="chat_register_success">Your account have been created. Please login to continue!</string>
    <string name="chat_messages">Messages</string>
    <string name="chat_contacts">Contacts</string>
    <string name="chat_groups">Groups</string>
    <string name="chat_profile">Profile</string>
    <string name="chat_add">ADD</string>
    <string name="chat_add_normal">Add</string>
    <string name="chat_confirm">Confirm</string>
    <string name="chat_send_a_request_friend_to">Send a request friend to %1s?</string>
    <string name="chat_you_have_no_message_yet">No message yet</string>
    <string name="chat_you_have_no_group_yet">No group yet</string>
    <string name="chat_you_have_no_friends_yet">You have no friends yet.</string>
    <string name="chat_this_conversation_have_no_message_yet">This conversation have no message yet.</string>
    <string name="chat_type_your_message">Type your message…</string>
    <string name="chat_pending">Pending</string>
    <string name="chat_find_friends">Find Friends</string>
    <string name="chat_friend_request">Friend Requests</string>
    <string name="chat_delete">Delete</string>
    <string name="chat_you_have_no_friend_request">You have no friend request</string>
    <string name="chat_unfriend">Unfriend</string>
    <string name="chat_group_name">Group Name</string>
    <string name="chat_create">Create</string>
    <string name="chat_name">Name</string>
    <string name="chat_cancel">Cancel</string>
    <string name="chat_members_in_group">%d members in group</string>
    <string name="chat_seen">Seen</string>
    <string name="chat_create_group">Create group</string>
    <string name="chat_create_new_group">Create New Group</string>
    <string name="chat_search">Search…</string>

    <string name="chat_no_contact">No contacts yet</string>
    <string name="chat_no_contact_search"><![CDATA[We couldn\'t find anything for <b>%s</b>]]></string>
    <string name="chat_invite_friend_to_this_group">Invite friend to this group</string>
    <string name="chat_start_record">Start Record</string>
    <string name="chat_stop_record">Stop Record</string>
    <string name="chat_done">Done</string>
    <string name="chat_open_gallery">Open Gallery</string>
    <string name="chat_open_camera">Open Camera</string>
    <string name="chat_friend_request_sent">Friend Request Sent</string>
    <string name="chat_add_friend">Add Friend</string>
    <string name="chat_accept">Accept</string>
    <string name="chat_decline">Decline</string>
    <string name="chat_remove">Remove</string>
    <string name="chat_confirm_delete_message">Delete message for %s?</string>
    <string name="chat_delete_message_success">Delete message success!</string>
    <string name="chat_confirm_remove_friend">Remove %s?</string>
    <string name="chat_say_hello_to">Say Hello to</string>
    <string name="chat_vesion_name">Version %s</string>
    <string name="chat_members_in_this_group">Members in this group</string>
    <string name="chat_shared_files">Shared files</string>
    <string name="chat_shared_links">Shared links</string>
    <string name="chat_view_profile">View Profile</string>
    <string name="chat_about_this_conversation">About this conversation</string>
    <string name="chat_about_this_group">About this group</string>
    <string name="chat_time">--:--</string>
    <string name="chat_participants">%d Participants</string>
    <string name="chat_member_admin">Admin</string>
    <string name="chat_deny">Deny</string>
    <string name="chat_scroll_down_to_see_new_messages">Scroll down to see new messages</string>
    <string name="chat_calling">Calling…</string>
    <string name="chat_send">Send</string>
    <string name="chat_would_like_to_video_chat">Would like to video chat…</string>
    <string name="chat_missing_call">Missed Call</string>
    <string name="chat_missing_video">Missed Video</string>
    <string name="chat_text_call_back">Call back</string>
    <string name="chat_menu_add_member">Add Member</string>
    <string name="chat_menu_edit_group">Edit Group</string>
    <string name="chat_menu_leave_group">Leave Group</string>
    <string name="chat_popup_group_add">Add Member</string>
    <string name="chat_popup_group_edit">Edit Group</string>
    <string name="chat_popup_group_leave">Leave Group</string>
    <string name="chat_confirm_leave_group">Leave this group?</string>
    <string name="chat_not_now">Not Now</string>
    <string name="chat_edit_group">Edit Group</string>
    <string name="chat_the_video_call_ended">The video call ended (%s).</string>
    <string name="chat_you">you</string>
    <string name="chat_add_more_friend_to_group_call">Add more friend to group call</string>
    <string name="chat_wants_to_connect_with_you">%s wants to connect with you</string>
    <string name="chat_add_more_people">Add More People</string>
    <string name="chat_are_typing">are typing…</string>
    <string name="chat_is_typing">is typing…</string>
    <string name="chat_back_to_call">Back to call</string>
    <string name="chat_text_no_internet_connection">No internet network</string>
    <string name="chat_text_join_group">Join group</string>
    <string name="chat_online">Online</string>
    <string name="chat_offline">Offline</string>
    <string name="chat_busy">Busy</string>
    <string name="chat_away">Away</string>
    <string name="chat_status">Status</string>
    <string name="chat_log_out">Log Out</string>
    <string name="chat_forward">Forward</string>
    <string name="chat_forward_message">Forward Message</string>
    <string name="chat_people">People</string>
    <string name="chat_friend">Friend</string>
    <string name="chat_delete_member">Delete %s member</string>
    <string name="chat_please_choose_contact_you_want_delete">PLease Choose Contact You Want Delete</string>
    <string name="chat_delete_message">Delete %s message</string>
    <string name="chat_delete_contacts">Delete %s contacts</string>
    <string name="chat_has_removed">%1s has removed %2s</string>
    <string name="chat_has_add_to_chat">%1s has added %2s to the chat</string>
    <string name="chat_today">TODAY</string>
    <string name="chat_are_connected">%1s and %2s are connected</string>
    <string name="chat_would_like_to_add_as_friend">%1s would like to add %2s as friend</string>
    <string name="chat_started_sharing_video">%s started sharing video.</string>
    <string name="chat_joined_the_group_call">%s joined the group call.</string>
    <string name="chat_joined_the_group_video_call">%s joined the group video chat.</string>
    <string name="chat_started_a_group_call">%s started a group call.</string>
    <string name="chat_started_a_group_video_call">%s started a group video chat.</string>
    <string name="chat_the_group_call_end">The voice call ended (%s).</string>
    <string name="chat_the_group_call_end_no_time">The voice call ended.</string>
    <string name="chat_the_group_video_call_end">The video call ended.</string>
    <string name="chat_has_left">%s has left</string>
    <string name="chat_has_added_to_the_chat">%1s has added %2s to the chat</string>
    <string name="chat_group_has_been_updated">Group has been updated</string>
    <string name="chat_missed_a_call_from">%1s missed a call from %2s.</string>
    <string name="chat_missed_a_video_call_from">%1s missed a video call from %2s.</string>
    <string name="chat_upload_file">%s uploaded file.</string>
    <string name="chat_sent_to">%s sent to %s</string>
    <string name="chat_add_success">Add Success</string>
    <string name="chat_please_choose_friend">Please Choose Friend</string>
    <string name="chat_please_choose_member">Please Choose Member</string>
    <string name="chat_no_activity_found_to_open_this_attachment">No activity found to open this attachment.</string>
    <string name="chat_not_found_file">Not Found File</string>

</resources>
