<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
            android:id="@+id/action_message"
            android:title="@string/chat_messages"
            android:enabled="true"
            app:showAsAction="always"
            android:icon="@drawable/ic_messages"/>

    <item
            android:id="@+id/action_contact"
            android:title="@string/chat_contacts"
            android:enabled="true"
            app:showAsAction="always"
            android:icon="@drawable/ic_contacts"/>

    <item
            android:id="@+id/action_groups"
            android:title="@string/chat_groups"
            android:enabled="true"
            app:showAsAction="always"
            android:icon="@drawable/ic_groups"/>
</menu>