<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
                name="viewModel"
                type="belp.myapplication.koin.register.RegisterViewModel"/>

        <variable
                name="model"
                type="belp.data.model.CreatedUser"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="@dimen/positive_30dp"
            android:layout_marginStart="@dimen/positive_30dp">

        <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/koin"
                android:textSize="@dimen/text_size_15sp"
                app:layout_constraintBottom_toTopOf="@id/im_avatar"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>

        <belp.base.widgets.CircleImageView
                android:onClick="@{() -> viewModel.onChooseAvatar()}"
                android:id="@+id/im_avatar"
                android:layout_width="@dimen/positive_40dp"
                android:src="@android:mipmap/sym_def_app_icon"
                android:layout_height="@dimen/positive_40dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginBottom="@dimen/positive_100dp"/>

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/et_username"
                android:hint="@string/username"
                android:text="@={model.userName}"
                app:layout_constraintTop_toBottomOf="@+id/im_avatar"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/et_name"
                android:hint="@string/name"
                android:text="@={model.name}"
                app:layout_constraintTop_toBottomOf="@+id/et_username"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/et_email"
                android:hint="@string/email"
                android:text="@={model.emailAddress}"
                app:layout_constraintTop_toBottomOf="@+id/et_name"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/et_password"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:text="@={model.password}"
                app:layout_constraintTop_toBottomOf="@+id/et_email"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>

        <belp.base.widgets.RippleButton
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="@dimen/positive_20dp"
                android:textColor="@color/colorWhite"
                android:textAlignment="center"
                app:rb_ripple_color="@color/colorWhite"
                android:gravity="center"
                app:rb_normal_color="@color/colorBlue"
                android:text="@string/create"
                android:onClick="@{() -> viewModel.onRegister(model)}"
                app:layout_constraintTop_toBottomOf="@+id/et_password"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>