<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:tools="http://schemas.android.com/tools"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
                name="loginRequest"
                type="belp.data.model.LoginRequest"/>

        <variable
                name="viewModel"
                type="belp.myapplication.koin.LoginViewModel"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="@dimen/positive_30dp"
            android:layout_marginStart="@dimen/positive_30dp">

        <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/im_logo"
                android:layout_width="wrap_content"
                android:src="@android:mipmap/sym_def_app_icon"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginBottom="@dimen/positive_100dp"/>

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/et_username"
                android:hint="@string/username"
                android:text="@={loginRequest.userName}"
                app:layout_constraintTop_toBottomOf="@+id/im_logo"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/et_password"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:text="@={loginRequest.password}"
                app:layout_constraintTop_toBottomOf="@+id/et_username"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>

        <androidx.appcompat.widget.AppCompatCheckBox
                android:layout_width="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/et_password"
                app:layout_constraintLeft_toLeftOf="parent"
                android:id="@+id/chb_remember"
                android:checked="@={loginRequest.remember}"
                android:text="@string/remember"
                android:layout_height="wrap_content"/>

        <belp.base.widgets.RippleButton
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="51dp"
                android:textColor="@color/colorWhite"
                android:textAlignment="center"
                app:rb_ripple_color="@color/colorWhite"
                android:gravity="center"
                app:rb_normal_color="@color/colorBlue"
                android:text="@string/login"
                android:onClick="@{() -> viewModel.onLogin(loginRequest)}"
                app:layout_constraintTop_toBottomOf="@+id/chb_remember"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>

        <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/btn_login"
                android:layout_marginTop="@dimen/positive_8dp"
                android:text="@string/register"
                android:onClick="@{() -> viewModel.onRegister()}"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>